<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inventario"
            android:icon="@drawable/ic_assignment_black_48dp"
            android:title="@string/inventario" />
        <item
            android:id="@+id/nav_ventas"
            android:icon="@drawable/ic_attach_money_black_48dp"
            android:title="@string/ventas" />
        <item
            android:id="@+id/nav_recordatorios"
            android:icon="@drawable/ic_alarm_black_48dp"
            android:title="@string/recordatorios" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_assignment_ind_black_24dp"
            android:title="@string/clientes" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="Cerrar sesión" />

    </group>


</menu>
