<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.example.caro.microadmin.ProductoActivity">


    <ScrollView
        android:layout_width="368dp"
        android:layout_height="587dp"
        android:scrollbarStyle="insideOverlay"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/agregar_producto"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp" />

            <RelativeLayout
                android:id="@+id/layout_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/producto_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    app:srcCompat="@android:drawable/ic_menu_camera"
                    tools:ignore="ContentDescription,VectorDrawableCompat" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/bt_subir_imagen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:clickable="true"
                    app:fabSize="mini"
                    app:srcCompat="@android:drawable/ic_menu_gallery"
                    tools:ignore="RtlHardcoded,VectorDrawableCompat" />
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/tf_codigo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/codigo" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/tv_nombre_producto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/tf_cantifdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cantidad"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/tf_precio_unidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/precio_por_unidad"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/tf_costo_manufactura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/costo_manufactura_por_unidad"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bt_guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guardar" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
